# avwohl-cpmemu

./: .gitignore  README.md
.github/workflows/: release.yml
docs/: qkz80_interrupts.md
examples/: README.md  assembler.cfg  compiler.cfg  example.cfg  mbasic_tests.cfg  simple_test.cfg  test.cfg  test2.cfg
packaging/windows/: AppxManifest.xml  README.md  build-msix.ps1  generate_icons.py
src/: CMakeLists.txt  Makefile.win  cpmemu.cc  do_build.bat  makefile  qkz80.cc  qkz80.h  qkz80_mem.h  qkz80_reg_set.cc  qkz80_reg_set.h  qkz80_trace.h  qkz80_types.h
src/os/: platform.h
src/os/linux/: platform.cc
src/os/windows/: platform.cc
util/: cpm_disk.py  test_cpm_disk.py
